Changed the template.

--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -37,7 +37,7 @@
           <td id='gender'></td>
         </tr>
         <tr>
-          <th>Date of Birth:</th>
+          <th>Patient's Date of Birth:</th>
           <td id='birthdate'></td>
         </tr>
       </table>
