Added Tonic logo.

--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -20,6 +20,8 @@
       <div class="bounce3"></div>
     </div>
     <div id='holder' >
+      <div id='logo'></div>
+
       <h2>Example-SMART-App</h2>
 
       <h2>Patient Resource</h2>
