Updated PAV image.

--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -20,7 +20,7 @@
       <div class="bounce3"></div>
     </div>
     <div id='holder' >
-      <div id='logo'><img src="./src/images/PAV.png" width="1000" height="1352" alt="Patient Answer Verification" title="Patient Answer Verification"/></div>
+      <div id='logo'><img src="./src/images/PAV-2.png" width="1280" height="721" alt="Patient Answer Verification" title="Patient Answer Verification"/></div>
     </div>
     <!-- Required JS files to enable this page to embed within an MPage -->
     <!--
