--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -27,7 +27,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': '5840a71f-e119-4977-81f2-ec198620eff1',
-        'scope':  'patient/Patient.read patient/Observation.read user/Patient.read user/Observation.read user/Person.read user/Practitioner.read launch online_access openid profile'
+        'scope':  'patient/Patient.read patient/Observation.read user/Patient.read user/Observation.read user/Person.read user/Practitioner.read fhirUser launch online_access openid profile'
       });
     </script>
     <div class="spinner">
